--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
     <style>
         .decoded-text {
             display: none;
