changed name to document fingerprint

--- a/views/demo.html
+++ b/views/demo.html
@@ -95,7 +95,7 @@ function downloadFile(blob, name) {
 </head>
 
 <body onload="generateIdentity()">
-    <h1>Document ID v0.1 Demo</h1>
+    <h1>Document Fingerprint v0.1 Demo</h1>
     <p><small>Only works for PDF's for now</small></p>
     
     <h3>Current Logged In User:</h3>
