--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>Document ID v0.1 Encoder/Decoder</h1>
+    <h1>Document Fingerprint v0.1 Encoder/Decoder</h1>
     <p><small>Only works for PDF's for now. Click <a href="/demo">here</a> to view demo</small></p>
     <h3>Encode File</h3>
     <input class="originalFile" type="file"> <br /><br />
